Get styling of header correct. Align all items on page as intended.

--- a/client/src/app/app.component.scss
+++ b/client/src/app/app.component.scss
@@ -1,8 +1,7 @@
 :host {
     display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 100vh;
-    width: 100%;
+    flex-direction: column;
+    min-height: 100vh;
+    width: 100vw;
     background-color: #eaf5ff;
 }
