--- a/client/src/app/sudoku/sudoku.component.scss
+++ b/client/src/app/sudoku/sudoku.component.scss
@@ -1,4 +1,12 @@
 .sudoku-container {
-    height: 100vh;
-    width: 100vw;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    min-height: 100vh;
+    width: 100%;
+    padding: 20px;
+}
+
+#check-solution-button {
+    align-self: flex-start;
 }
